force-app/main/default/objects/Payment__c/fields/Contact_Type1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type1__c</fullName>
    <formula>TEXT(Closing__r.Winning_Inquiry__r.InquiryType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type(decrypted)</label>
    <type>Text</type>
</CustomField>