force-app/main/default/objects/Payment__c/fields/Others_Amount_Description__c.field-meta.xml
<CustomField>
    <fullName>Others_Amount_Description__c</fullName>
    <inlineHelpText>Installment / Deposit / Other Fees</inlineHelpText>
    <label>Others Payment Type Amount Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>