force-app/main/default/objects/Payment__c/fields/Payment_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment 18 Digit Id</label>
    <type>Text</type>
</CustomField>