force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DLD fee</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Conveyance Fee</fullName>
            </value>
            <value>
                <fullName>POA Fee</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>1st installment</fullName>
                <isActive>false</isActive>
                <label>1st installment</label>
            </value>
            <value>
                <fullName>2nd installment</fullName>
                <isActive>false</isActive>
                <label>2nd installment</label>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
                <isActive>false</isActive>
                <label>Admin Fees</label>
            </value>
            <value>
                <fullName>Installment</fullName>
                <isActive>false</isActive>
                <label>Installment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>