force-app/main/default/objects/Payment__c/fields/Refrence_Number__c.field-meta.xml
<CustomField>
    <fullName>Refrence_Number__c</fullName>
    <label>Refrence Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>