force-app/main/default/objects/Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Received By Developer</fullName>
            </value>
            <value>
                <fullName>Sent to Developer</fullName>
            </value>
            <value>
                <fullName>Cheque Bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>