force-app/main/default/objects/Payment__c/recordTypes/Sale_Rent.recordType-meta.xml
<RecordType>
    <fullName>Sale_Rent</fullName>
    <active>true</active>
    <label>Sale</label>
</RecordType>