force-app/main/default/objects/Payment__c/validationRules/Mandatory_Conveyance_Or_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Conveyance_Or_Closing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Conveyance__c ) , ISBLANK( Closing__c ) )</errorConditionFormula>
    <errorMessage>Either Conveyance OR Closing is  mandatory in Payment.</errorMessage>
</ValidationRule>