force-app/main/default/objects/Payment__c/validationRules/Others_Payment_Type_Amount_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Others_Payment_Type_Amount_Description</fullName>
    <active>true</active>
    <description>If Payment Type is Others, Others Payment Type Amount Description require.</description>
    <errorConditionFormula>IF( 
ISPICKVAL(Payment_Type__c , &apos;Others&apos;),
ISBLANK( Others_Amount_Description__c ),
null
)</errorConditionFormula>
    <errorDisplayField>Others_Amount_Description__c</errorDisplayField>
    <errorMessage>Others Payment Type Amount Description is Mandatory.</errorMessage>
</ValidationRule>